--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+language: generic
 sudo: required
 services:
   - docker
@@ -6,7 +7,7 @@ before_install:
   - docker build -t jwu/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run jwu/react-test npm test -- --coverage
+  - docker run -e CI=true USERNAME/react-test npm test
 
 after_success:
   - dcoker build -t jwu/multi-client ./client
