--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: required
 services:
   - docker
 before_install:
-  - docker build -t jwu/react-test -f ./client/dev.Dockerfile ./client
+  - docker build -t jwu/react-test -f ./client/Dockerfile.dev ./client
 
 script:
   - docker run -e CI=true jwu/react-test npm test
